inicia bs + sass

--- a/scss/_codigoNoPasado.scss
+++ b/scss/_codigoNoPasado.scss
@@ -6,7 +6,7 @@
 }
 
 header{
-    background-image: url(imagenes/1411287.webp);
+    background-image: url(../imagenes/1411287.webp);
     background-position: center;
     background-size: cover;
 
